FIX: missing color in news box on news page

--- a/css/style.css
+++ b/css/style.css
@@ -611,6 +611,7 @@ blockquote {
     border-radius: 10px;
     border: 1px solid #cccccccc;
     overflow: hidden; /* This contains the scrollbar within the rounded corners */
+    background-color: var(--news-box-bg-color);
 }
 
 .news-container {
@@ -618,7 +619,6 @@ blockquote {
     flex-direction: row;
     padding: 0 5px 5px 5px;
     overflow: auto;
-    background-color: var(--news-box-bg-color);
 }
 
 .news-container::-webkit-scrollbar {
@@ -645,6 +645,7 @@ blockquote {
     max-width: 702px;
     margin: 0 auto;
 	flex-wrap: wrap;
+    background-color: unset;
 }
 
 .news-box {
